vagicc.www.xust.net.f07443416deacb10492b933f4b03974e44d7be66
Running as unit: run-p704615-i13284995.scope; invocation ID: 1ad8aa2aba344e9abdec07e38e91f6dc
 Downloading crates ...
  Downloaded cc v1.0.100 (registry `tuna`)
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.12
   Compiling libc v0.2.155
   Compiling autocfg v1.3.0
   Compiling version_check v0.9.4
    Checking cfg-if v1.0.0
    Checking itoa v1.0.11
    Checking bytes v1.6.0
    Checking log v0.4.21
   Compiling thiserror v1.0.61
   Compiling typenum v1.17.0
    Checking pin-project-lite v0.2.14
    Checking fnv v1.0.7
   Compiling serde v1.0.203
   Compiling generic-array v0.14.7
   Compiling slab v0.4.9
    Checking futures-sink v0.3.30
    Checking memchr v2.7.4
   Compiling cc v1.0.100
    Checking futures-core v0.3.30
    Checking http v0.2.12
   Compiling num-traits v0.2.19
   Compiling unicase v2.7.0
    Checking tinyvec_macros v0.1.1
   Compiling httparse v1.9.4
    Checking tinyvec v1.6.0
   Compiling quote v1.0.36
    Checking getrandom v0.2.15
    Checking mio v0.8.11
    Checking num_cpus v1.16.0
   Compiling syn v2.0.68
    Checking socket2 v0.5.7
   Compiling lock_api v0.4.12
   Compiling strsim v0.11.1
   Compiling ident_case v1.0.1
    Checking percent-encoding v2.3.1
    Checking pin-utils v0.1.0
    Checking spin v0.9.8
   Compiling parking_lot_core v0.9.10
    Checking futures-task v0.3.30
    Checking form_urlencoded v1.2.1
    Checking futures-util v0.3.30
    Checking unicode-normalization v0.1.23
    Checking rand_core v0.6.4
    Checking once_cell v1.19.0
   Compiling ring v0.17.8
    Checking rustls-pki-types v1.7.0
    Checking untrusted v0.9.0
    Checking ryu v1.0.18
    Checking cpufeatures v0.2.12
    Checking smallvec v1.13.2
   Compiling serde_json v1.0.117
   Compiling ucd-trie v0.1.6
    Checking ppv-lite86 v0.2.17
    Checking unicode-bidi v0.3.15
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking scopeguard v1.2.0
    Checking digest v0.10.7
    Checking rand_chacha v0.3.1
    Checking idna v0.5.0
    Checking sha1 v0.10.6
    Checking tracing-core v0.1.32
    Checking hashbrown v0.14.5
    Checking equivalent v1.0.1
   Compiling libm v0.2.8
    Checking byteorder v1.5.0
    Checking mime v0.3.17
   Compiling rustls v0.22.4
    Checking tracing v0.1.40
    Checking url v2.5.2
   Compiling mime_guess v2.0.4
    Checking parking_lot v0.12.3
    Checking rand v0.8.5
    Checking num-integer v0.1.46
    Checking indexmap v2.2.6
    Checking aho-corasick v1.1.3
    Checking http v1.1.0
   Compiling bigdecimal v0.4.5
   Compiling multer v2.1.0
    Checking zeroize v1.8.1
   Compiling heck v0.5.0
    Checking httpdate v1.0.3
    Checking utf-8 v0.7.6
   Compiling pq-sys v0.6.1
   Compiling either v1.12.0
    Checking data-encoding v2.6.0
   Compiling time-core v0.1.2
    Checking try-lock v0.2.5
   Compiling num-conv v0.1.0
    Checking subtle v2.6.1
    Checking powerfmt v0.2.0
    Checking regex-syntax v0.8.4
   Compiling time-macros v0.2.18
    Checking want v0.3.1
    Checking num-bigint v0.4.5
    Checking deranged v0.3.11
    Checking scheduled-thread-pool v0.2.7
    Checking http-body v0.4.6
    Checking headers-core v0.2.0
    Checking futures-channel v0.3.30
    Checking encoding_rs v0.8.34
    Checking iana-time-zone v0.1.60
    Checking base64 v0.22.1
    Checking tower-service v0.3.2
    Checking base64 v0.21.7
    Checking time v0.3.36
    Checking rustls-pemfile v2.1.2
    Checking headers v0.3.9
    Checking regex-automata v0.4.7
    Checking r2d2 v0.8.10
    Checking is-terminal v0.4.12
    Checking humantime v2.1.0
    Checking termcolor v1.4.1
    Checking bitflags v2.6.0
    Checking uuid v1.9.1
    Checking sha1_smol v1.0.0
    Checking scoped-tls v1.0.1
    Checking lazy_static v1.5.0
    Checking dotenv v0.15.0
    Checking sha1 v0.6.1
   Compiling darling_core v0.20.9
   Compiling diesel_table_macro_syntax v0.2.0
    Checking rustls-webpki v0.102.4
   Compiling thiserror-impl v1.0.61
   Compiling serde_derive v1.0.203
   Compiling tokio-macros v2.3.0
   Compiling pin-project-internal v1.1.5
    Checking regex v1.10.5
    Checking tokio v1.38.0
    Checking env_logger v0.10.2
    Checking pin-project v1.1.5
    Checking tungstenite v0.21.0
    Checking pest v2.7.10
   Compiling darling_macro v0.20.9
   Compiling darling v0.20.9
   Compiling dsl_auto_type v0.1.1
   Compiling pest_meta v2.7.10
   Compiling diesel_derives v2.2.1
   Compiling pest_generator v2.7.10
   Compiling pest_derive v2.7.10
    Checking tokio-util v0.7.11
    Checking tokio-rustls v0.25.0
    Checking tokio-tungstenite v0.21.0
    Checking h2 v0.3.26
    Checking serde_urlencoded v0.7.1
    Checking ipnetwork v0.20.0
    Checking chrono v0.4.38
    Checking handlebars v5.1.2
    Checking diesel v2.2.1
    Checking hyper v0.14.29
    Checking warp v0.3.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.1/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
